fix: flickering

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -332,7 +332,8 @@ body {
     shape-outside: circle(50%);
     background-color: orangered;
     clip-path: circle(50% at 50% 50%);
-    transform: translateX(-3rem) skewX(12deg); }
+    transform: translateX(-3rem) skewX(12deg);
+    overflow: hidden; }
   .story__image {
     height: 100%;
     shape-outside: circle(50%);
